# DECIDE

DECIDE/: .gitignore  DECIDE_classDiagram.ucls  launch.sh  model.notation  model.uml  pom.xml
DECIDE/models/uuv/: uuv.csl  uuv.sm
DECIDE/resources/: config.properties  config1.properties  config2.properties
DECIDE/src/: log4j.properties
DECIDE/src/auxiliary/: Utility.java
DECIDE/src/decide/: DECIDE.java
DECIDE/src/main/: mainClient.java  mainDECIDE.java  mainServer.java
DECIDE/src/network/: ClientDECIDE.java  MulticastClient.java  MulticastReceiver.java  MulticastServer.java  MulticastTransmitter.java  ServerDECIDE.java
DECIDE/src/robot/: Robot.java
DECIDE_Compiled/: robotIndi.sh
DECIDE_Framework/: .gitignore  .project  DECIDE_classDiagram.ucls  RequirementsNew.ucls  applog.txt  build.sh  decideClassDiagram.ucls  launch.sh  model.notation  pom.xml  robot.sh  robotIndi.sh  robotIndividual.sh  uuvindi.sh
DECIDE_Framework/models/die/: die.pctl
DECIDE_Framework/models/robot/: robot.csl
DECIDE_Framework/models/robots/: robot.props
DECIDE_Framework/models/uuv/: uuv.sm
DECIDE_Framework/resources/: config.properties  config1.properties  config2.properties  config3.properties  config4.properties  config5.properties  config6.properties  config7.properties  config8.properties  log4j.properties
DECIDE_Framework/resources/healthcare/: config.properties  config1.properties  config2.properties  config3.properties  configUUV.properties
DECIDE_Framework/resources/uuv/: config.properties  config1.properties  config2.properties  config3.properties  config4.properties
DECIDE_MOOS/: .cproject  .project  README.txt
DECIDE_MOOS/DECIDE_MISSION/: README.txt  clean.sh  launch.sh  meta_shoreside.moos  meta_vehicle.moos  plug_sDECIDE.moos  plug_sRQVMOOS_DECIDE.moos  plug_sSonarSensor1.moos  plug_sSonarSensor2.moos  plug_sSonarSensor3.moos
DECIDE_MOOS/PrismServer/: README.txt  clean.sh  launch.sh
DECIDE_MOOS/PrismServer/PrismServerJar/: clean.sh  launch.sh
DECIDE_MOOS/sDECIDE/: .cproject  .project  CMakeLists.txt  DECIDE.cpp  DECIDE.h  DECIDE.moos  DECIDE_Info.cpp  DECIDE_Info.h  main.cpp
DECIDE_MOOS/sDECIDE/Client/: CMakeLists.txt  Client.cpp
DECIDE_MOOS/sDECIDE/MergeSort/: MergeSort.cpp
DECIDE_MOOS/sRQVMOOS_DECIDE/: CMakeLists.txt  RQVMOOS_DECIDE.cpp  RQVMOOS_DECIDE.h  RQVMOOS_DECIDE_Info.cpp  main.cpp  sRQVMOOS_DECIDE.moos
DECIDE_MOOS/sRQVMOOS_DECIDE/Client/: Client.cpp  Client.h
DECIDE_MOOS/sRQVMOOS_DECIDE/MergeSort/: CMakeLists.txt  MergeSort.h
DECIDE_MOOS/sRQVMOOS_DECIDE/NodeMessage/: CMakeLists.txt
DECIDE_MOOS/sSonarSensor/: SonarSensor.cpp  SonarSensor.h  SonarSensorOld.cpp  SonarSensor_Info.h  sSonarSensor.moos
DECIDE_MOOS/sSonarSensor /: CMakeLists.txt  SonarSensor_Info.cpp  main.cpp
SimpleIDE/: CMakeLists.txt  Library.c  Library.side  Multicore Example2.c  Multicore Example2.h  Multicore Example2.side  MulticoreAddedCpp.cpp  MulticoreAddedCpp.side  tags
SimpleIDE/Display/: Hello LCD.c  LiqCrystalDisplay.cpp  LiqCrystalDisplay.side
SimpleIDE/Display/cmm/: Hello LCD.binary  Hello LCD.elf
SimpleIDE/QTI/: QTIDrive.c  QTIDrive.side  QTI_Test.c  QTI_Test.side  tags
SimpleIDE/QTI/QTI Example Code for ActivityBot/: Line Follow with QTIs.c  Line Follow with QTIs.side  Test QTIs.c  Test QTIs.side
SimpleIDE/QTI/QTI Example Code for ActivityBot/cmm/: Line Follow with QTIs.binary  Line Follow with QTIs.elf  Test QTIs.binary  Test QTIs.elf
SimpleIDE/QTI/cmm/: QTIDrive.binary  QTIDrive.elf  QTI_Test.binary  QTI_Test.elf
SimpleIDE/RobotWifi/: RobotWifi copy.cpp  RobotWifi.cpp  RobotWifi.h  RobotWifi2.c  RobotWifi2.h  RobotWifi2.side  RobotWifi3.cpp  RobotWifi3.h  RobotWifi3.side  RobotWifiC.c  RobotWifiC.h  RobotWifiC.side  RobotWifiC4.c  RobotWifiC4.h  RobotWifiC4.side  tags
SimpleIDE/RobotWifi/cmm/: RobotWifi2.binary  RobotWifi2.elf  RobotWifiC.binary  RobotWifiC.elf  RobotWifiC4.binary  RobotWifiC4.elf
SimpleIDE/Scan/: ScanToInt.c  ScanToInt.side
SimpleIDE/Wifi/: WiFiCode.c  WiFiCode.side  Wifi.c  Wifi.side
SimpleIDE/WorkExperience/: WorkExperience.c  WorkExperience.side  WorkExperienceFixed.c  WorkExperienceLib.c  WorkExperienceLib.h  fixed simos's program final (1).c  tags
SimpleIDE/WorkExperience/cmm/: WorkExperience.binary  WorkExperience.elf
SimpleIDE/cmm/: Library.binary  Library.elf  MulticoreAddedCpp.binary  RobotWifi.binary  RobotWifi.elf  RobotWifi2.binary  RobotWifi2.elf  RobotWifi3.binary  RobotWifi3.elf  ScanToInt.binary  ScanToInt.elf  WiFiCode.binary  WiFiCode.elf  Wifi.binary  Wifi.elf
SimpleIDE/lmm/: Multicore Example2.binary  Multicore Example2.elf  MulticoreAddedCpp.binary  RobotWifi2.binary  RobotWifi2.elf
SimpleIDE/xmmc/: MulticoreAddedCpp.elf
decide/: clean.sh  launch.sh  launchOld.sh  launch_Alpha.sh  meta_vehicle.bhv  meta_vehicle.moos  targ_APOLLO.bhv  targ_APOLLO.moos  targ_HERMES.bhv  targ_HERMES.moos  targ_ZEUS.bhv  targ_ZEUS.moos  targ_shoreside.moos
decide/Experiments/: .RData  .Rhistory  1.csv  Experiments.xlsx  decideFunctions.R
decide/Experiments/Backup/: Experiments copy 2.xlsx  Experiments copy 3.xlsx  Experiments copy.xlsx  Experiments.xlsx  ExperimentsOl.xlsx  excessEnergy.xlsx
decide/Experiments/Scalability/: Scalability.xlsx  scalability.plot  scalabilityLog.csv  scalabilityLog.plot
decide/Experiments/Scenario/: ExperimentsBackUp.xlsx  javaCPU_Apollo.csv  javaCPU_Hermes.csv  javaCPU_Zeus.csv  scenarioApollo.csv  scenarioApollo4.csv
decide/Experiments/alpha/: Loss.xlsx  (+1 more)
models/CTMCModels/: room.props  t1room.prism  t2room.prism
workspaceCLion/: CMakeLists.txt
(+819 files in other folders)
